// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing/functional/increment-gallery-site/functional.test.ts testing asynchronousity & ordering instant scraper 1`] = `
Array [
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts testing asynchronousity & ordering instant scraper 2`] = `
Array [
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "three",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts testing asynchronousity & ordering psuedo-random delayed scraper 1`] = `
Array [
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "three",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts with cached scraper should make the expected requests on first pass 1`] = `
Array [
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "three",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts with instant scraper should group each image into a separate slot, in order 1`] = `
Array [
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts with instant scraper should group tags and images together that were found on the same page 1`] = `
Array [
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "three",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts with psuedo-random delayed scraper should keep images and tags together, in order 1`] = `
Array [
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "three",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts with value limit first pass does not use the value limit 1`] = `
Array [
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts with value limit second pass should find only the images on the first gallery page 1`] = `
Array [
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts with value limit should group each image into a separate slot, in order 1`] = `
Array [
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts with value limit step 1 does not use the value limit 1`] = `
Array [
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`testing/functional/increment-gallery-site/functional.test.ts with value limit step 2 should overwrite image values and only find images from the first gallery page 1`] = `
Array [
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "byteLength": "17.0",
      "complete": 1,
      "downloadData": "[\\"http://increment-gallery-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": true,
      "id": true,
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;
